# whisper

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build.sh  global.json  paket.dependencies  vcpkg.json
.config/: dotnet-tools.json
.github/workflows/: nuget.yml  nupkg.yml  pr.yml  trunk.yml
src/dotnet/: .gitignore  CMakeLists.txt  Directory.Build.props  base.i  dotnet.csproj  dotnet.sln  whisper.i
src/dotnet/examples/: example.cs  example.csproj  paket.references
src/dotnet/examples/Properties/: launchSettings.json
src/dotnet/runtime/: CMakeLists.txt  paket.references  runtime.csproj  whisper.i
src/dotnet/tests/: Tests.cs  paket.references  tests.csproj
